temp_test/invalid/imports/importingSameFile.wacc
# importing file that doesnt exist

# Output:
#

# Program:

import importingSameFile.wacc

begin
  int x = 5
end